Create `glass-tree` starting point

--- a/glass-web-components/src/index.html
+++ b/glass-web-components/src/index.html
@@ -9,6 +9,14 @@
     <script nomodule src="/build/glass-web-components.js"></script>
   </head>
   <body>
+
+    <h2>Out-of-the-box Example Component</h2>
+
     <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
-  </body>
+
+    <h2>Tree</h2>
+  
+    <glass-tree name="Hello World"/>
+
+</body>
 </html>
